# voice-to-img

./: LICENSE  pyproject.toml
src/speech_to_img/: gui.py  main.py
