[project]
name = "speech-to-img"
version = "0.1.0"
description = ""
authors = [
    {name = "roBoot-LDT",email = "maksim.nemkov.ldt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
]

[tool.poetry]
packages = [{include = "speech_to_img", from = "src"}]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
